# SparsePostQuantumRatchet

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Cross.toml  Probe.lean  README.md  Spqr.lean  SpqrToVCVio.lean  SrcTranslated.lean  Tests.lean  Utils.lean  aeneas-config.yml  build.rs  check_copyrights.sh  hax.py  lake-manifest.json  lakefile.toml  package-lock.json  package.json  src-modifications.diff  translation.json
.github/: pull_request_template.md
.github/workflows/: aeneas.yml  hax.yml  lean.yml  proverif.yml  sorry-delta-comment.yml  src-diff.yml  test.yml
Spqr/Aux/Aeneas/: StdNextCoreIterRangeStep.lean  StdNextStepUsize.lean
Spqr/Code/: Funs.lean  FunsExternal.lean  Types.lean  TypesExternal.lean
Spqr/Lint/: Basic.lean  SpecIndent.lean
Spqr/Math/: List.lean
Spqr/Math/Gf16/: Basic.lean  Field.lean  Irreducible.lean
Spqr/Math/Gf2Poly/: Basic.lean  NatRep.lean
Spqr/Math/Poly/: Eval.lean  ModByMonic.lean
Spqr/Specs/Aeneas/: FmtArgumentsFromStr.lean  IntoIteratorSlice.lean  RangeIteratorNext.lean  SliceIteratorNext.lean  VecExtendFromSlice.lean
Spqr/Specs/IncrementalMlkem768/: CoreSpec.lean  Correctness.lean  Generate.lean  Instance.lean  Marshalling.lean  README.md  SeedRng.lean  WrapperSpecs.lean
Spqr/Specs/Util/: Compare.lean  Inz.lean  IsNonZero.lean
SrcTranslated/: Funs.lean  FunsExternal.lean  Types.lean  TypesExternal.lean
Tests/LinterTest/: SpecIndent.lean
Utils/: Config.lean  Status.lean
Utils/Lib/: Analysis.lean  Translation.lean
benches/: chain.rs  gf.rs  polynomial.rs  spqr.rs
doc/: PERFORMANCE.md  STYLE_GUIDE.md  WORKFLOW_AND_PR_GUIDE.md
proofs/fstar/extraction/: .gitignore  Makefile
proofs/fstar/models/: Alloc.Collections.Vec_deque.fsti  Alloc.Slice.fst  Bytes.Buf.Buf_impl.fsti  Bytes.Buf.Buf_mut.fsti  Libcrux_hmac.fsti  Libcrux_ml_kem.Constants.fst  Libcrux_ml_kem.Hash_functions.Portable.fsti  Libcrux_ml_kem.Hash_functions.fsti  Libcrux_ml_kem.Ind_cca.Incremental.Types.fsti  Libcrux_ml_kem.Ind_cca.Unpacked.fsti  Libcrux_ml_kem.Ind_cpa.Unpacked.fsti  Libcrux_ml_kem.Mlkem768.Incremental.fsti  Makefile  (+16 more)
proofs/proverif/: README.md  cryptolib.pvl  spqr-cka.pv  spqr-dr.pv
scripts/: Audit.lean  aeneas-extract.ts  aeneas-install.ts  check-lint.sh  sorry-diff.py
scripts/lib/: config.ts
src/: authenticator.rs  chain.rs  encoding.rs  incremental_mlkem768.rs  kdf.rs  lib.rs  proto.rs  serialize.rs  test.rs  util.rs  v1.rs
src/authenticator/: serialize.rs
src/encoding/: gf.rs  polynomial.rs  round_robin.rs
src/proto/: pq_ratchet.proto  pq_ratchet.rs
src/test/: basic_messaging_behavior.rs  generic_dr.rs  messaging_behavior.rs  messaging_scka.rs  onlineoffline.rs  orchestrator.rs  pingpong_messaging_behavior.rs  scka.rs  v1_impls.rs  x25519_scka.rs
src/v1/: chunked.rs  unchunked.rs
(+93 files in other folders)
