[package]
name = "spqr"
version = "1.2.0"
edition = "2021"
license = "AGPL-3.0-only"
rust-version = "1.83.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = { version = "4.1.3", features = ["rand_core"] }
displaydoc = "0.2"
hax-lib = "0.3.1"
hkdf = "0.12"
libcrux-hkdf = "0.0.2"
libcrux-hmac = "0.0.2"
libcrux-ml-kem = { version = "0.0.2", default-features = false, features = ["incremental", "mlkem768"] }
log = "0.4.21"
num_enum = "0.7.3"
prost = "0.13.1"
rand = "0.9"
rand_core = "0.9"
sha2 = "0.10"
sorted-vec = "0.8.6"
thiserror = "2.0.11"

[dev-dependencies]
galois_field_2pm = "0.1.0"
hmac = "0.12.1"
matches = "0.1.10"
rand_08 = { package = "rand", version = "0.8" }
rand_distr = "0.5.1"

[build-dependencies]
prost-build = "0.13.1"

[features]
proof = []

[target.'cfg(not(any(windows, target_arch = "x86")))'.dependencies]
# sha2's asm implementation uses standalone .S files that aren't compiled correctly on Windows,
# and aren't linked correctly on x86 Android.
# This will be fixed in sha2 0.11, which also removes the "asm" feature and turns it on by default.
# So when sha2 0.11 is released, this section will go away.
sha2 = { version = "0.10", features = ["asm"] }

[target.'cfg(any(target_arch = "aarch64", target_arch = "x86_64", target_arch = "x86"))'.dependencies]
cpufeatures = "0.2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(hax)',
] }
