[package]
name = "spqr"
version = "1.5.3"
edition = "2021"
license = "AGPL-3.0-only"
rust-version = "1.88.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = { version = "5.0.0", features = ["rand_core"] }
displaydoc = "0.2"
hax-lib = "0.3.7"
hkdf = "0.13"
libcrux-hmac = "0.0.8"
libcrux-ml-kem = { version = "0.0.10", default-features = false, features = ["incremental", "mlkem768"] }
log = "0.4.21"
num_enum = "0.7.3"
prost = "0.14.1"
rand = "0.9"
rand_core = "0.9"
sha2 = "0.11"
sorted-vec = "0.8.6"
thiserror = "2.0.11"

[dev-dependencies]
# When built directly, auto-enable the test-utils feature.
spqr = { path = ".", features = ["test-utils"] }

env_logger = "0.11"
galois_field_2pm = "0.1.0"
hex = "0.4"
hmac = "0.13"
matches = "0.1.10"
proptest = "1.7"
rand_distr = "0.5.1"

[build-dependencies]
prost-build = "0.14.1"

[features]
proof = []
test-utils = []

[target.'cfg(any(target_arch = "aarch64", target_arch = "x86_64", target_arch = "x86"))'.dependencies]
cpufeatures = "0.3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(hax)',
] }

[profile.dev]
opt-level = 2
